@@ -1,5 +1,10 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Gentoo external dependency handling updates
+pts-core: Better external dependency handling when running on EC2 instances
+
 Phoronix Test Suite 7.6.0 Milestone 3
 21 November 2017
 
